--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -192,7 +192,7 @@
 	font-family: $font-family-cabin;
 	font-weight: 300;
 	padding: 0;
-	margin: 7px 0 0 15px;
+	margin: 0 0 0 15px;
 	text-align: center;
 	display: inline;
 	width: 100%;
