--- a/src/sass/_crn-signin.scss
+++ b/src/sass/_crn-signin.scss
@@ -1,13 +1,103 @@
 // signin page
-.signInBlock{
-	width:500px;
-	margin:20px auto;
-	button{
-		margin: 20px 0px;
+.is-front{
+	height:100%;
+	.full-col,
+	.main,
+	.main > div,
+	.sign-in,
+	.intro{
+		height:100%;
 	}
-	.footer{
-		button{
-			margin: 0 10px 0 0px;
+
+	.intro{
+	    display: block;
+	    overflow: hidden;
+	    width: 100%;
+	    height: 100%;
+		background: url(../assets/signin-bg.jpg) 0 0 no-repeat;
+		background-size: cover;
+		.intro-inner{
+			max-width:1800px;
+			margin:0 auto;
+		}
+		.intro-teasers{
+			height: 40%;
+			max-height: 350px;
+		    background-color: #fff;
+		    padding: 30px 0;
+		    position: absolute;
+		    bottom: 0;
+		    left: 0;
+		    right: 0;
+		    h4{
+				font-size: 22px;
+				line-height: 21px;
+				text-align: center;
+		    }
+		    img{
+		    margin: 0px auto 5px;
+				width: 50px;
+				height: auto;
+				display: block;
+		    }
 		}
 	}
+	@media(max-width:1200px){
+		.intro{
+			max-height: auto;
+		}
+	}
+	@media(max-height:850px){
+		.intro{
+			overflow-y: scroll;
+			.intro-teasers{
+			    margin-top: 130px;
+			    position:relative;
+				height: auto;
+				max-height: 900000px;
+			}
+		}
+	}
+}
+.sign-in {
+	.welcomeBlock{
+		padding: 30px;
+	    border: 2px solid #fff;
+	    border-radius:2px;
+	    border-radius: 2px;
+	   	margin:60px auto;
+	    position: relative;
+	    background:rgba(0,0,0,0.1);	   
+	    color:#fff;
+		width: 90%;
+		max-width: 700px;
+		text-align: center;
+	    h1{
+			letter-spacing: -1px;
+			font-size: 45px;
+			margin: 0;
+	    }
+	}
+	.signInBlock{
+		text-align: center;
+		color:#fff;
+		.form{
+			display: flex;
+			justify-content: center;
+			button.btn-admin{
+				margin: 10px;
+				width: 230px;
+				border-color: #fff;
+				color: #fff;
+				padding: 8px 5px;
+				font-size: 20px;
+				font-weight: 200;
+				font-family: helvetica neue, helvetica;
+				&:hover{
+					background:rgba(0,0,0,0.4);
+				}
+			}
+		}
+	}
+
 }
