--- a/src/sass/_crn-left_navbar.scss
+++ b/src/sass/_crn-left_navbar.scss
@@ -44,10 +44,12 @@
 				i{
 					border-right: 1px solid #bbb;
 					padding: 10px;
+					width: 60px;
+					text-align: center;
+					font-size: 22px;
 					margin: -10px;
-				 	width: 60px;
-				 	text-align: center;
-				 	font-size: 35px;
+					position: relative;
+					top: -4px;
 				}
 				.link-name{
 					font-size: 19px;
