--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -134,10 +134,10 @@
 	    color: #565656;
 	    font-weight: 100;
 	    font-family: $font-family-ssp;
-	    span{
-			display: block;
+	    div{
 			padding: 10px 0;
 			border-bottom: 1px solid #EEE;
+			&:last-child {border-bottom: none;}
 	    }
 	}
 	.btn-wrapper{
