--- a/src/sass/_crn-upload.scss
+++ b/src/sass/_crn-upload.scss
@@ -34,6 +34,12 @@
 	    font-size: 20px;
 	    line-height: 25px;
 	    text-shadow: 1px 1px 2px #000;
+	    .message{
+	    	color:$coral;
+	    	&:hover{
+	    		color:lighten($coral, 10%);
+	    	}
+	    }
 	
 	}
 }
