--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -115,12 +115,12 @@ body.modal-open{
 	}
 
 	.modal-dialog{
-	    width: 100%;
-	    margin: 0;
+	    width: 700px;
+	    margin: 0 auto;
 	    padding:0 0 20px;
 	    border-radius: 0;
 	    background-color: #fff;
-	    box-shadow:20px 0 8px rgba(0,0,0,0.5);
+	    box-shadow:0 3px 8px rgba(0,0,0,.5);
 		.modal-content{
 			border-radius: 0;
 			border: 0;
