--- a/src/sass/_crn-dashboard.scss
+++ b/src/sass/_crn-dashboard.scss
@@ -155,60 +155,24 @@
 			background:#f8f8f8;
 			.panel-heading{
 				padding: 0;
-				background-color: rgba(0, 0, 0, 0);
+				background:#fff;
 				a{
 					display: block;
-					padding: 10px 20px;
-					background:#fff;
+					padding: 0;
+					
 					transition: background 1s ease;
 					color:$primary;
+					width: 50%;
+					float: left;
 					h4{
 						border: none;
-						width: 60%;
-						float: left;
 						margin: 0;
 						font-size: 15px;
+						padding: 10px 20px;
+						line-height: 15px;
 						
-						span.dataset-name{
-							float: left;
-							display: block;
-							width: 70%;
-						}
-						ul.nav-pills{
-							float: left;
-							display: block;
-							width: 30%;
-							border-right:1px solid #ddd;
-							border-left:1px solid #ddd;
-							padding: 5px;
-							text-align: center;
-							li{
-								float: none;
-								padding:0;
-								margin:0;
-							}
-						}
-
-						.nav.nav-pills > li {
-							margin: 0px;
-						}
 					}
-
-					.date{
-						float: left;
-						margin: 0;
-						text-align: right;
-						width: 40%;
-						color: #909090;
-						font-size: 10px;
-						padding-top: 5px;
-						.time-ago{
-							margin-left: 10px;
-							text-transform: uppercase;
-
-						}
-					}
-					&:after {
+				&:after {
 						clear: both;
 					}
 					&:before, 
@@ -218,11 +182,49 @@
 					}
 
 					&:hover{
-
-						background:#fafafa;
 						color:$primaryHover;
 					}
 				}
+					
+					
+
+					.meta-data-container{
+						width: 50%;
+						float: left;
+						box-sizing: border-box;
+						padding:10px 20px;
+						ul{
+							list-style: none;
+							padding: 0;
+							margin: 0;
+							li{
+								display: inline-block;
+								float: right;
+								margin-right: 0;
+								margin-left: 15px;
+								width: auto;
+								text-align: right;
+								box-sizing: border-box;
+							}
+						}
+
+
+						.date{
+							float: none;
+							margin: 0;
+							color: #909090;
+							font-size: 10px;
+							padding:0;
+							line-height: 15px;
+							text-align: right;
+							.time-ago{
+								margin-left: 10px;
+								text-transform: uppercase;
+
+							}
+						}
+					}
+					
 			}
 			.panel-collapse {
 				.panel-body{
