--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -310,13 +310,52 @@
 		background:none;
 		color:$brand-danger;
 	}
+	.file-wrap{
+
+	}
 	input {
-		position: absolute;
-		top:0px;
-		left:0px;
-		bottom:0px;
-		right:0px;
-		opacity: 0;
-		height: auto !important;
+		color: transparent;
+		// margin: 0 auto 30px;
+		padding: 0;
+		height: 20px;
+		display: block;
+		width: 100%;
+		max-width: 90px;
+		&::-webkit-file-upload-button {
+			visibility: hidden;
+			color: transparent;
+		}
+	  &::before {
+	    font-family: FontAwesome;
+	    content: 'resume';
+	    display: inline-block;
+	    background-color:$sky;
+	    @include gradient-vertical($start-color: lighten($sky, 8%), $end-color: $sky, $start-percent: 10%, $end-percent: 100%);
+	    box-shadow:$btn-shadow;
+	    border-radius: 2px;
+	    outline: none;
+	    white-space: nowrap;
+	    -webkit-user-select: none;
+	    cursor: pointer;
+	    font-weight: 300;
+	    font-size: 10px;
+	    color:$white;
+	    text-align: center;
+	    padding:0;
+	    margin:0;
+	    width: 100%;
+	    border:1px solid lighten($sky, 8%);
+	    text-transform: uppercase;
+	    transition: all 0.3s ease-out;
+	  }
+	  &:hover::before,
+	  &:active::before  {
+	    background: darken($sky, 10%);
+	    transition: all 0.3s ease-out;
+	  }
+
+	  &[type="file"]:focus {
+	    outline:none;
+	  }
 	}
 }
