adding fix for dataset status display

--- a/src/sass/_crn-signin.scss
+++ b/src/sass/_crn-signin.scss
@@ -17,6 +17,7 @@
 	    	background: url(../assets/signin-bg.jpg) 0 0 no-repeat;
 			background-size: cover;
 			min-height: 550px;
+			background-color: #1B3D43;
 		}
 		.intro-inner{
 			max-width:1800px;
