--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -41,34 +41,40 @@
 		float: none;
 		box-sizing: border-box;
 		padding:10px 20px;
-		ul{
-			list-style: none;
+		span.status-wrap{
 			padding: 0;
 			margin: 0;
-			li{
-				display: inline-block;
-				float: right;
-				margin-right: 0;
-				margin-left: 15px;
-				width: auto;
-				text-align: right;
-				box-sizing: border-box;
-				.file-wrap{
+			.status{
+
+		
+			 	display: inline-block;
+			 	width: 100px;
+			 	float: right;
+			 	margin-right: 0;
+			 	margin-left: 15px;
+			// 	width: auto;
+			 	text-align: right;
+			// 	box-sizing: border-box;
+			// 	.icon-wrap{
+			// 		display: block;
+			// 	}
+			// 	.file-wrap{
+			// 		display: block;
+			// 	}
+			}
 					input[type="file"].dirUpload-btn{
 						color: rgba(0, 0, 0, 0);
 						padding: 0;
 						height: 21px;
 						display: block;
 						width: 100%;
-						max-width: 80px;
-						float: right;
+						max-width: 100px;
 							&:before{
 								font-size: 12px;
 								padding: 0;
+								content: 'resume';
 							}
 					}
-				}
-			}
 		}
 	}
 	.card{
@@ -113,7 +119,7 @@
 		margin:5px 0 0;
 	}
 	.tools-wrap{
-		margin: -20px -20px 0 -20px;
+		margin: -20px -15px 0 -15px;
 		background: $ocean;
 		padding: 0;
 		.tools{
