--- a/src/sass/_crn-dashboard.scss
+++ b/src/sass/_crn-dashboard.scss
@@ -232,11 +232,11 @@
 						float: left;
 						box-sizing: border-box;
 						padding:10px 20px;
-						ul{
+						span.status-wrap{
 							list-style: none;
 							padding: 0;
 							margin: 0;
-							li{
+							span.status{
 								display: inline-block;
 								float: right;
 								margin-right: 0;
