--- a/src/sass/animate/_fading-entrances/_fadeIn.scss
+++ b/src/sass/animate/_fading-entrances/_fadeIn.scss
@@ -10,5 +10,5 @@
 	@include delay($delay);
 	@include function($function);
 	@include fill-mode($fill);
-	@include visibility($visibility);
+	//@include visibility($visibility);
 }
