adding height for delete

--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -60,6 +60,7 @@
 					.delete-file{
 						display: inline-block;
 						overflow: hidden;
+						height: 13px;
 						button{
 							padding: 2px 5px;
 							margin: 0;
