--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -42,7 +42,7 @@
 				    			font-size: 10px;
 				    		}
 
-				    		&.add-files:before {content: 'add files';}
+				    		&.add-files:before {content: 'add a file';}
 				    		&.update-file:before {
 								content: 'update';
 								background: none;
