--- a/src/sass/_crn-navbar.scss
+++ b/src/sass/_crn-navbar.scss
@@ -6,7 +6,7 @@
   padding: 0;
   border-radius:0;
   border:none;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.4);
+//  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.4);
   z-index: 1300;
   .navbar-nav>li>{
 		a.link {
@@ -46,7 +46,7 @@
 		width: 75px;
 		height: auto;
 		overflow: hidden;
-		box-shadow: 1px 2px 3px -2px rgba(0, 0, 0, 0.5);
+		//box-shadow: 1px 2px 3px -2px rgba(0, 0, 0, 0.5);
 		position: absolute;
 		top: 0;
 		right: 0;
