--- a/src/sass/_crn-dashboard.scss
+++ b/src/sass/_crn-dashboard.scss
@@ -95,7 +95,7 @@
 					margin: 0;
 					color:#aaa;
 					border-radius:0;
-					background:none;
+					background:#fefefe;
 						border: 1px solid #C2C2C2;
 					    border-width: 0 0 0 1px;
 					    padding:5px;
@@ -105,7 +105,7 @@
 					        height: 30px;
 					        transition: all 0.3s ease;
 					&.filter-all{
-						text-transform: uppercase;
+						//text-transform: uppercase;
 						font-size: 12px;
 						font-weight: 600;
 					}
@@ -154,9 +154,9 @@
 				}
 				a{
 					padding: 0;
-					background: none;
+					background: #fefefe;
 					color: #909090;
-					text-transform: uppercase;
+					//text-transform: uppercase;
 					font-size: 12px;
 					font-weight: 600;
 					text-align: left;
