--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -1,7 +1,11 @@
 // dataset dataset view
 .dataset {
 	.fileStructure.panel-group{
-		.panel-default .panel-collapse{
+		.panel-default{
+			.panel-heading .panel-title{
+				font-size: 15px;
+				color: #4c5664;
+			}
 			.panel-body{
 				padding:0;
 				ul{
