--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -396,15 +396,36 @@
 			width: 85px;
 			height: 29px;
 			font-size: 15px;
+			box-shadow:none;
 		    &:before{
 			    border-radius: 2px;
 			    padding: 7px;
-			    border: none;
 			    box-shadow: none;
 				width: 85px;
 				font-size: 13px;
 				height: 29px;
+				border:none;
+				background: none;
+				border-radius: 0;
+				outline: none;
+				white-space: nowrap;
+				-webkit-user-select: none;
+				cursor: pointer;
+				font-weight: 300;
+				color: #007c92;
+				text-align: center;
+				margin: 0;
+				border: none;
+				text-transform: uppercase;
+				transition: all 0.3s ease-out;
 			}
+
+			&:hover:before{
+					color: #00515f;
+					transition: all 0.3s ease-out;
+					background: #eee;
+			}
+			
 		}
 
 
