--- a/src/sass/_crn-dashboard.scss
+++ b/src/sass/_crn-dashboard.scss
@@ -5,9 +5,10 @@
 		margin-right: 10px;
 		a{
 			transition: background 0.3s ease;
-		  	padding: 6px 20px;
-		  	font-size: 12px;
-		  	border-radius: 2px;
+		  	padding: 10px 20px;
+		  	font-size: 14px;
+		  	text-transform:uppercase;
+		  	border-radius: 0;
 		  	.unread-badge{
 				background: #77E6A3;
 				position: absolute;
@@ -22,16 +23,6 @@
 				height: 17px;
 				color:$ocean;
 				font-weight: 600;
-		  	}
-			&:hover{
-				background:$sky;
-				color:#fff;
-			}
-			&.active.btn-blue{
-				background:$ocean;
-		  		border:1px solid $ocean;
-		  		color:#fff;
-		  		box-shadow:inset 0 0 2px rgba(0,0,0,0.4);
 		  	}
 		}
 		&.navbar-right{
@@ -54,10 +45,17 @@
 			}
 		}
 	}
+	.dash-tab-link{
+		position:relative;
+		z-index: 601;
+		top:0px;
+	}
 	.dash-tab-content{
 		box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.3);
 		padding: 0;
-		margin: 20px 0;
+		margin: 0 0 20px 0;
+		position:relative;
+		z-index: 600;
 		.header-wrap{
 			border-bottom: 1px solid #E1E1E1;
 		}
