--- a/src/sass/_crn-upload.scss
+++ b/src/sass/_crn-upload.scss
@@ -363,9 +363,9 @@
 											display: block;
 											padding: 10px;
 											font-size: 12px;
-											color:  $coral;
-											background-color:#efefef;
 											
+											background-color:#efefef;
+											color:#333;
 											border-bottom: 1px solid #BBB;
 											border-top: 1px solid transparent;
 											text-decoration: none;
@@ -374,12 +374,16 @@
 											&:after{
 												content:'';
 											}
+											h4{
+												color:  $coral;
+												margin-top: 0;
+											}
 											.pull-right{
 												font-size: 10px;
 												text-transform: uppercase;
 												color:#888;
 												margin-top: 3px;
-
+												color:#333;
 												&:before{
 													color:$coral;
 													content: 'Hide\00a0';
@@ -389,7 +393,7 @@
 											
 											}
 									 		&.collapsed{
-												color:  $coral;
+												//color:  $coral;
 												background-color:#F3F3F3;
 												&:before{
 										 				
@@ -403,9 +407,17 @@
 												}
 											}
 											&:hover{
-												color:$coral;
+												h4{
+													color:darken($coral, 10%);
+												}
 												text-decoration: none;
 												background-color:#efefef;
+													.pull-right{
+													
+														&:before{
+															color:darken($coral, 10%);
+														}
+													}
 												i{
 													&:after{
 														color:$coral;
@@ -453,11 +465,17 @@
 										.em-body{
 											border-bottom:1px solid #ddd;
 											margin: 0;
-											padding:0 10px;
+											padding:10px;
 											.em-header{
-												color: $coral;
+												color: #333;
 												margin: 0;
 												padding: 3px 0 5px 0;
+												font-size: 14px;
+												font-weight: 600;
+												.pull-right{
+													font-weight: 400;
+													font-size: 10px
+												}
 											}
 											.e-meta{
 												label{
