--- a/src/sass/_crn-admin.scss
+++ b/src/sass/_crn-admin.scss
@@ -1,5 +1,33 @@
 
 // userCard admin
+
+.blacklist-modal{
+	button.btn-blue{
+		background: none;
+	    box-shadow: none;
+	    border-radius: 0;
+	    outline: none;
+	    white-space: nowrap;
+	    -webkit-user-select: none;
+	    cursor: pointer;
+	    font-weight: 300;
+	    color: #007c92;
+	    text-align: center;
+	    margin: 0;
+	    border: none;
+	    text-transform: uppercase;
+	    transition: all 0.3s ease-out;
+		width: 100px;
+		margin: 0;
+		padding: 10px;
+		font-size: 12px;
+	    &:hover, &:active, &.hover, &.active {
+		    color: #00515f;
+		    transition: all 0.3s ease-out;
+		    background: #eee;
+		}
+	}
+}
 .admin{	
 	.form-group label {
 		position: absolute;
@@ -9,12 +37,26 @@
 		color: #777;
 		//display: none;
 	}
+	&.blacklist{
+		h2{
+		    float: left;
+		}
+		button.btn-blue{
+		    float: right;
+		    width: 100px;
+		    padding: 10px;
+		    font-size: 12px;
+		    margin: 10px;
+		}
+		.no-results{
+			margin:10px;
+		}
+	}
 	.add-user{
 		padding-left:0;
 	}
 	.users-card{
-		box-shadow: 1px 0 3px 0 rgba(0,0,0,.3);
-	    margin: 20px 0;
+	    margin: 20px 0 0;
 	}
 	.users-card{
 		h2{
@@ -29,7 +71,7 @@
 			margin: 0 -15px;
 			border-radius: 0;
 			border: none;
-			border-bottom: 1px solid #E1E1E1;
+			border-top: 1px solid #E1E1E1;
 			box-shadow: none;
 			padding: 0;
 		}
