--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -512,3 +512,151 @@
 	  }
 	}
 }
+
+
+.anaylsis-modal{
+	.task-select{
+		border:1px solid #ccc;
+		padding:0;
+		select{
+			border:none;
+		}
+	}
+	.parameters{
+		margin-top: 10px;
+		.form-group{
+			padding: 13px 10px 14px 0;
+			&:nth-child(odd){
+				background: #f9f9f9;
+			}
+			.input-group{
+				width: 100%;
+			}
+			.input-group-addon{
+			    width: 150px;
+			    white-space: normal;
+			    text-align: left;
+			    vertical-align: top;
+			}
+			input{
+				height: 40px;
+				font-size: 16px;
+				float: none;
+				&.checkbox{
+				    box-shadow: none;
+				    padding: 0;
+				    margin: 0;
+				    height: auto;
+					height: 0; width: 0; 
+					display: none;
+					position: absolute;
+					left: -99999em;
+				}	
+			}
+			input[type='checkbox'] + label > {
+					position: relative;
+					display: flex;
+					margin: .6em 0;
+					align-items: center;
+					color: #9e9e9e;
+					transition: color 250ms cubic-bezier(.4,.0,.23,1);
+				}
+				input[type='checkbox'] + label > span{
+					display: block;
+					margin-right: 0;
+					width: auto;
+					height: auto;
+					background: rgba(0, 0, 0, 0);
+					border: 2px solid #9E9E9E;
+					border-radius: 1px;
+					cursor: pointer;
+					transition: all 250ms cubic-bezier(.4, 0, .23, 1);
+					padding: 8px;
+					position: relative;
+				}
+
+				input[type='checkbox'] + label > :hover, 
+				input[type='checkbox']:focus + label > {
+					color: #fff;
+				}
+				input[type='checkbox'] + label > :hover > span, 
+				input[type='checkbox']:focus + label > span{
+					background: rgba(255,255,255,.1);
+				}
+
+				input[type='checkbox']:checked + label > span{
+					border: 2px solid lighten($brand-success, 10%);
+					background: lighten($brand-success, 10%);
+					color:#fff;
+					animation: shrink-bounce 200ms cubic-bezier(.4,.0,.23,1);
+				}
+				input[type='checkbox']:checked + label > span:before{
+					content: "";
+					position: absolute;
+					top: .6em;
+					left: .2em;
+					border-right: 3px solid transparent;
+					border-bottom: 3px solid transparent;
+					transform: rotate(45deg);
+					transform-origin: 0% 100%;
+					animation: checkbox-check 125ms 250ms cubic-bezier(.4,.0,.23,1) forwards;
+				}
+			
+		}
+		.help-text{
+			font-size: 14px;
+			padding: 10px 10px;
+			display: block;
+			border: 1px solid #ddd;
+			margin:5px 0 0 0;
+			color: #999;
+			background: #eee;
+		}
+	}
+	.default-reset{
+		padding:10px;
+	}
+	
+	.modal-actions{
+		margin-top: 10px;
+		padding:0;
+		.admin-blue{
+		}
+	}
+
+
+}
+
+
+@keyframes shrink-bounce{
+  0%{
+    transform: scale(1);
+  }
+  33%{    
+    transform: scale(.85);
+  }
+  100%{
+    transform: scale(1);    
+  }
+}
+@keyframes checkbox-check{
+  0%{
+    width: 0;
+    height: 0;
+    border-color: #212121;
+    transform: translate3d(0,0,0) rotate(45deg);
+  }
+  33%{
+    width: .2em;
+    height: 0;
+    transform: translate3d(0,0,0) rotate(45deg);
+  }
+  100%{    
+    width: .2em;
+    height: .5em;    
+    border-color: #212121;
+    transform: translate3d(0,-.5em,0) rotate(45deg);
+  }
+}
+
+
