--- a/src/sass/_crn-general_BStrap_Overrides.scss
+++ b/src/sass/_crn-general_BStrap_Overrides.scss
@@ -104,6 +104,11 @@
 		}
 	}
 }
+.btn-reset{
+	@extend .btn-admin;
+	border:none;
+
+}
 .btn-blue{
 	background-color:$sky;
 	@include gradient-vertical($start-color: lighten($sky, 8%), $end-color: $sky, $start-percent: 10%, $end-percent: 100%);
@@ -175,20 +180,29 @@
 	color: #777;
 	//display: none;
 }
-.form-group input {
-	width: 100%;
-	height: 50px;
-	font-size: 22px;
-	font-weight: lighter;
-	font-family: helvetica;
-	padding: 0px 10px;
-	border: none;
-	background: rgba(255,255,255,1);
-	border-radius:2px;
-	box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.14);
-	&:focus{
-		outline: 1px solid rgba(229, 85, 85, 0.25);
+.form-group{
+ 	input {
+		width: 100%;
+		height: 50px;
+		font-size: 22px;
+		font-weight: lighter;
+		font-family: helvetica;
+		padding: 0px 10px;
+		border: none;
+		background: rgba(255,255,255,1);
+		border-radius:2px;
+		box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.14);
+		&:focus{
+			outline: 1px solid rgba(229, 85, 85, 0.25);
 
+		}
+	}
+	.input-group-addon{
+		    border-radius: 0;
+		    background: none;
+		    box-shadow:none;
+		    border: none;
+		    text-transform: uppercase;
 	}
 }
 
@@ -208,6 +222,17 @@ textarea.form-control {
 		outline: 1px solid rgba(229, 85, 85, 0.25);
 		box-shadow:inset 0 0 1px 1px rgba(0,0,0,.14);
 	}
+}
+
+select {
+  width: 100%;
+  height: 40px;
+  border-radius:0;
+  border: 1px solid #d8d8d8;
+  background: #fff;
+  font-size: 16px;
+  text-indent: 5px;
+  color: #a5a5a5;
 }
 
 
