adjusitng layouts and making changes for the dataset page and sidebar

--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -1,10 +1,29 @@
 // dataset dataset view
 .dataset {
+
+	h3.metaheader{
+		font-size: 18px;
+		color: #424242;
+		line-height: 21px;
+		padding: 0;
+		display: inline-block;
+		max-width: 100%;
+		margin-bottom: 5px;
+		font-weight: bold;
+		font-family: 'Cabin', sans-serif;
+	}
 	.fileStructure.panel-group{
 		.panel-default{
 			.panel-heading .panel-title{
-				font-size: 15px;
-				color: #4c5664;
+				font-size: 18px;
+				color: #424242;
+				line-height: 21px;
+				padding: 0;
+				display: inline-block;
+				max-width: 100%;
+				margin-bottom: 5px;
+				font-weight: bold;
+				font-family: 'Cabin', sans-serif;
 			}
 			.panel-body{
 				padding:0;
@@ -172,17 +191,11 @@
 		padding: 0;
 		margin: 20px 0;
 	}
-	.dataset-descriptions{
-		padding: 0;
-	}
+
 	.description-item{
-		padding: 20px;
+		padding-bottom:20px;
+		margin-bottom: 20px;
 		border-bottom:1px solid #eee;
-		border-right:1px solid #eee;
-		border-left:1px solid #eee;
-		&:first-child{
-			border-top:1px solid #eee;
-		}
 		.file-name-link{
 			i{
 				font-size: 13px;
@@ -190,20 +203,25 @@
 		}
 	}
 	.dataset-readme{
-	    padding: 20px 20px 20px 0;
 	}
 	h1{
 		margin: 0;
-		padding: 10px 0 0 0;
-		font-size: 30px;
+		padding: 0;
 		text-transform: uppercase;
 		font-weight: 100;
-		.dataset-name{
-			float: left;
-		}
+		font-family: 'Cabin', sans-serif;
+		font-size: 16px;
+		line-height: 16px;
 		.nav.nav-pills{
 			float: left;
 		}
+		 .cte-display{
+		 	font-size: 30px;
+		 }
+		.cte-edit{    
+		 	margin: 10px 0;
+		}
+
 	}
 	h6{
 		margin:5px 0 0;
@@ -279,7 +297,7 @@
 	  }
 	}
 	.cte-display{
-	    font-size: 18px;
+	    font-size: 15px;
 	    color: #565656;
 	    font-weight: 100;
 	    font-family: $font-family-ssp;
@@ -623,10 +641,40 @@
 		.admin-blue{
 		}
 	}
-
-
 }
-
+.dataset-tools-wrap{
+	margin: -20px 0 20px;
+    padding: 0;
+	
+	.tools{
+		padding: 0;
+		margin: 0;
+		display:block;
+		width: 100%;
+		background: #eee;
+		.tool {	
+			text-align: center;
+			width: 70px;
+			float: left;
+			display: block;
+			> button,
+			.fadeIn > button{
+				width: 100%;
+				color: $ocean;
+				&:hover{
+					background: #006B7B;
+					color:#fff;
+				}
+			}
+			button{
+					padding:7px 10px;
+					transition: all 0.1s ease;
+					border-radius:0;
+			
+				}
+			}
+	}
+}
 
 @keyframes shrink-bounce{
   0%{
@@ -658,5 +706,43 @@
     transform: translate3d(0,-.5em,0) rotate(45deg);
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.jobs-wrap.panel-group {
+	margin-bottom: 0;
+	margin:0;
+	.panel-collapse{
+		.panel-body{
+			border-top:none;
+		}
+	}	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
