adjusting the wrap on input display

--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -302,6 +302,7 @@
 	    font-weight: 100;
 	    font-family: $font-family-ssp;
 	    word-wrap: break-word;
+	    white-space: pre-wrap;
 	    div{
 			padding: 10px 0;
 			border-bottom: 1px solid #EEE;
